--- a/src/language.html
+++ b/src/language.html
@@ -12,9 +12,9 @@
         <div class="topnav">
             <div class="navitem">
                   <div class="dropdown-container" style="display: block;">
-                        <a href="index.html" style="font-size: 20px; padding: 20px; margin-bottom: 10px;">HOME</a>
-                        <a href="About.html" style="font-size: 20px; padding: 20px; margin-bottom: 10px;">ABOUT</a>
-                        <a href="contact.html" style="font-size: 20px; padding: 20px; margin-bottom: 10px;">CONTACT</a>
+                        <a href="/index.html" style="font-size: 20px; padding: 20px; margin-bottom: 10px;">HOME</a>
+                        <a href="/src/about.html" style="font-size: 20px; padding: 20px; margin-bottom: 10px;">ABOUT</a>
+                        <a href="/src/contact.html" style="font-size: 20px; padding: 20px; margin-bottom: 10px;">CONTACT</a>
                         <a href="https://squad-47.netlify.app/" target="_blank" style="font-size: 20px; padding: 20px; margin-bottom: 10px;">SQUAD 47</a>
                   </div>
             </div>
