--- a/Html Helpsheet/Html.html
+++ b/Html Helpsheet/Html.html
@@ -12,7 +12,7 @@
     <div id="mySidenav" class="sidenav">
         <div class="topnav">
             <div class="navitem">
-                <a href="/src/index.html"><button class="btn">Home</button></a>
+                <a href="/index.html"><button class="btn">Home</button></a>
                 <a href="/src/language.html"><button class="btn">Languages</button></a>
             </div>
         </div>
