--- a/C helpsheet/c.html
+++ b/C helpsheet/c.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>C Helpsheet</title>
     <link rel = "icon" href = "/assets/hand-shake.png" type = "image/x-icon">
     <link rel="stylesheet" href="/src/cheatsheet.css">
     <script src="https://kit.fontawesome.com/6e745cae97.js" crossorigin="anonymous"></script>
@@ -12,34 +12,9 @@
     <div id="mySidenav" class="sidenav">
         <div class="topnav">
             <div class="navitem">
-                <a href="/src/index.html"><button class="btn">Home</button></a>
-                <button class="dropdown-btn">Languages
-                  </button>
-                  <div class="dropdown-container">
-                    <div class="dropitem">
-                        <i class="fa-brands fa-html5" id="html" style="color: #ffffff;"></i><a href="Html.html">Html</a>
-                    </div>
-                    <div class="dropitem">
-                        <i class="fa-brands fa-css3-alt" id="css" style="color: #ffffff;"></i>
-                        <a href="css.html">CSS</a>
-                    </div>
-                    <div class="dropitem">
-                        <i class="fa-brands fa-js" id="js" style="color: #ffffff;"></i>
-                        <a href="comeingsoon.html">JS</a>
-                    </div>
-                    <div class="dropitem">
-                        <i class="fa-brands fa-python" id="py" style="color: #ffffff;"></i>
-                        <a href="comeingsoon.html">PYTHON</a>
-                    </div>
-                    <div class="dropitem">
-                        <i class="fa-solid fa-c" id="c" style="color: #ffffff;"></i>
-                        <a href="comeingsoon.html">C</a>
-                    </div>
-                    <div class="dropitem">
-                        <img src="c-.png" alt="" id="cpp" style="height: 40px;">
-                        <a href="comeingsoon.html">C++</a>
-                    </div>
-                  </div>
+                <a href="/index.html"><button class="btn">Home</button></a>
+                <a href="/src/language.html"><button class="btn">Languages</button></a>
+
             </div>
         </div>
     </div>
