--- a/C helpsheet/intro2c.html
+++ b/C helpsheet/intro2c.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>C Helpsheet</title>
     <link rel = "icon" href = "/assets/hand-shake.png" type = "image/x-icon">
     <link rel="stylesheet" href="/templet.css">
 </head>
