--- a/comeingsoon.html
+++ b/comeingsoon.html
@@ -22,7 +22,7 @@
       rel="stylesheet">
     <!-- CSS -->
     <link rel="stylesheet" href="comingsoon.css">
-    <title>Document</title>
+    <title>Helpsheet Coming Soon</title>
   </head>
   <body>
     <div class="container">
