--- a/src/contact.html
+++ b/src/contact.html
@@ -12,7 +12,7 @@
         <div class="responsive-container-block big-container">
           <div class="responsive-container-block container">
             <div class="responsive-cell-block wk-tab-12 wk-mobile-12 wk-desk-7 wk-ipadp-10 line" id="i69b-2">
-              <form class="form-box">
+              <form class="form-box"  method="POST" data-netlify="true">
                 <div class="container-block form-wrapper">
                   <div class="head-text-box">
                     <p class="text-blk contactus-head">
