--- a/src/contact.html
+++ b/src/contact.html
@@ -48,7 +48,7 @@
                       <p class="text-blk input-title">
                         WHAT DO YOU HAVE IN MIND
                       </p>
-                      <textarea class="textinput" id="i5vyy-6" placeholder="Please enter query..."></textarea>
+                      <textarea class="textinput" id="i5vyy-6" name="message" placeholder="Please enter query..."></textarea>
                     </div>
                   </div>
                   <div class="btn-wrapper">
