--- a/Html Helpsheet/htmlfundamentals.html
+++ b/Html Helpsheet/htmlfundamentals.html
@@ -12,7 +12,7 @@
         <p><a href="Html.html"> Helpsheets </a> / Learn HTML: Fundamentals</p>
         <h1>Elements and Structure</h1>
     </div>
-    <div class="sidenav" style="position: relative;top: -30px;">
+    <div class="sidenav" style="position: relative">
         <input type="submit" class="Scrollbutton" value="Elements and Structure" onClick="document.getElementById('topic1').scrollIntoView()"/>
     </div>
       <div class="main" style="position: relative;">
